# django-htmx-alpine-starter

./: .coveragerc  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: docker-ci.yml  python-ci.yml
core/: abstract_models.py  helpers.py  urls.py  views.py
core/tests/: test_abstract_models.py  test_helpers.py  test_views.py
django_site/: asgi.py  settings.py  urls.py  wsgi.py
django_site/tests/: test_views.py
static/css/: components.css  global.css
templates/: _base.html  index.html
templates/account/: account_inactive.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/account/snippets/: already_logged_in.html
templates/components/: footer.html  header.html  header_buttons.html  header_dropdown.html
templates/core/: account.html  dashboard.html
users/: admin.py  factories.py  models.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_factories.py
